Added unique feature for collection.
